fix: clean up color properties in CSS for improved readability

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 
   color-scheme: light;
   /* color-scheme: light dark; */
-  /* color: rgba(255, 255, 255, 0.87);
-  background-color: #242424; */
+  /* color: rgba(255, 255, 255, 0.87); */
+  background-color: var(--background_color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
